<resources>
    <string name="app_name">Toma Agora</string>
    <string name="patient_name">Nome do paciente</string>
    <string name="medicine">Remédio</string>
    <string name="start_date">Data de início</string>
    <string name="start_time">Horário início</string>
    <string name="period">Quantidade de dias</string>
    <string name="interval">Itervalo</string>
    <string name="save">Salvar</string>
</resources>